# ersatz

./: .gitignore  .hlint.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  Data-Logic-Ersatz-Bit.html  Data-Logic-Ersatz-Bits.html  Data-Logic-Ersatz-Encoding.html  Data-Logic-Ersatz-Internal-Bit.html  Data-Logic-Ersatz-Internal-Problem.html  Data-Logic-Ersatz-Problem.html  Data-Logic-Ersatz-Solution.html  Data-Logic-Ersatz-Solver-Minisat.html  Data-Logic-Ersatz-Solver.html  Data-Logic-Ersatz.html  Ersatz-Bit.html  Ersatz-BitChar.html  Ersatz-BitN.html  Ersatz-Bits.html  Ersatz-Codec.html  Ersatz-Decoding.html  Ersatz-Encoding.html  Ersatz-Equatable.html  Ersatz-Internal-Bit.html  Ersatz-Internal-Circuit.html  Ersatz-Internal-Formula.html  Ersatz-Internal-Literal.html  Ersatz-Internal-Problem.html  Ersatz-Monad.html  Ersatz-Orderable.html  Ersatz-Problem.html  Ersatz-Solution.html  Ersatz-Solver-DepQBF.html  Ersatz-Solver-Minisat.html  Ersatz-Solver.html  Ersatz-Variable.html  Ersatz.html  Front Page.page  Gitit User's Guide.page  Help.page  (+45 more)
.github/workflows/: haskell-ci.yml
Data/Logic/: Ersatz.hs
Data/Logic/Ersatz/: Bit.hs  Bits.hs  Encoding.hs  Internal.hs  Monad.hs  Problem.hs  Solution.hs  Solver.hs
Data/Logic/Ersatz/Internal/: Bit.hs  Problem.hs  Reify.hs  StableName.hs  TrivialParser.hs
Data/Logic/Ersatz/Solver/: Minisat.hs
Logic/QSAT/: Encoding.hs  Monad.hs  Problem.hs
Logic/QSAT/Encoding/: Bool.hs
data/dimacs/bf/: descr.html
data/dimacs/blocksworld/: anomaly.cnf  bw_large.b.cnf  medium.cnf
data/dimacs/bmc/: bmc-ibm-1.cnf
data/dimacs/logistics/: descr.html  logistics.c.cnf
data/dimacs/parity/: par16-1-c.cnf  par16-2-c.cnf  par16-3-c.cnf  par16-4.cnf  par8-2-c.cnf  par8-2.cnf  par8-3-c.cnf  par8-3.cnf  par8-4-c.cnf  par8-4.cnf  par8-5.cnf
examples/: Factor.hs  Fish.hs  LICENSE  Moore.hs  ersatz-examples.cabal
examples/dimacs/: GraphResult.hs
examples/dimacs/blocksworld/: bw_large.c.cnf  descr.html  huge.cnf
examples/dimacs/bmc/: bmc-ibm-3.cnf  bmc-ibm-4.cnf  bmc-ibm-7.cnf
examples/dimacs/logistics/: logistics.b.cnf  logistics.d.cnf
examples/dimacs/parity/: descr  par16-1.cnf  par16-2.cnf  par16-3.cnf  par16-4-c.cnf  par16-5-c.cnf  par16-5.cnf  par8-1.cnf  par8-5-c.cnf
examples/dimacs/phole/: descr.html
examples/factor/: Main.hs
examples/numeric/: Factor.hs  Math.hs
examples/qbf/: Coloring.hs  Synthesis.hs
examples/regexp-grid/: Main.hs  regexp-grid.cabal
examples/regexp-grid/RegexpGrid/: Problem.hs  Regexp.hs  Types.hs
examples/sudoku/: COPYING  Main.hs  sudoku.cabal
examples/sudoku/Sudoku/: Cell.hs  Problem.hs
notes/: SPOILER.html  papers.md
src/: Data-Logic-Ersatz-Bit.html  Data-Logic-Ersatz-Bits.html  Data-Logic-Ersatz-Encoding.html  Data-Logic-Ersatz-Internal-Bit.html  Data-Logic-Ersatz-Internal-Problem.html  Data-Logic-Ersatz-Internal-StableName.html  Data-Logic-Ersatz-Internal-TrivialParser.html  Data-Logic-Ersatz-Problem.html  Data-Logic-Ersatz-Solution.html  Data-Logic-Ersatz-Solver-Minisat.html  Data-Logic-Ersatz-Solver.html  Data-Logic-Ersatz.html  Ersatz-Bit.html  Ersatz-BitChar.html  Ersatz-BitN.html  Ersatz-Bits.html  Ersatz-Codec.html  Ersatz-Decoding.html  Ersatz-Encoding.html  Ersatz-Equatable.html  Ersatz-Internal-Bit.html  Ersatz-Internal-Circuit.html  Ersatz-Internal-Formula.html  Ersatz-Internal-Literal.html  Ersatz-Internal-Parser.html  Ersatz-Internal-Problem.html  Ersatz-Internal-StableName.html  Ersatz-Internal-TrivialParser.html  Ersatz-Monad.html  Ersatz-Orderable.html  Ersatz-Problem.html  Ersatz-Solution.html  Ersatz-Solver-Common.html  Ersatz-Solver-DepQBF.html  Ersatz-Solver-Minisat.html  Ersatz-Solver.html  Ersatz-Variable.html  Ersatz.hs  Ersatz.html
src/Data/Logic/: Ersatz.hs
src/Data/Logic/Ersatz/: Bits.hs  Decoding.hs  Encoding.hs  Problem.hs  Solution.hs  Solver.hs
src/Data/Logic/Ersatz/Internal/: Bit.hs  Problem.hs  StableName.hs  TrivialParser.hs
src/Ersatz/: Bit.hs  BitChar.hs  BitN.hs  Bits.hs  Codec.hs  Counting.hs  Decoding.hs  Encoding.hs  Equatable.hs  Monad.hs  Orderable.hs  Problem.hs  Relation.hs  Solution.hs  Solver.hs  Variable.hs
src/Ersatz/Internal/: Bit.hs  Circuit.hs  Formula.hs  Literal.hs  Monad.hs  Parser.hs  Problem.hs  StableName.hs  TrivialParser.hs
src/Ersatz/Relation/: ARS.hs  Data.hs  Op.hs  Order.hs  Prop.hs  Set.hs
src/Ersatz/Solver/: Common.hs  DepQBF.hs  Kissat.hs  Lingeling.hs  Minisat.hs  Z3.hs
test/: Main.hs
tests/: HUnit.hs  Moore.hs  Speed.hs  Z001.hs  doctests.hsc  properties.hs
