name:           qsat
version:        0.0.1
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
homepage:       http://comonad.com/reader
category:       Logic, Algorithms
synopsis:       
description:    A simple monad for specifying quantified booleam formulas (QBFs) and solving them
copyright:      (c) 2010 Edward A. Kmett
build-type:     Simple
cabal-version:  >=1.2
tested-with:    GHC==6.10.4
extra-files:    LICENSE

library
  include-dirs: include
  ghc-options: -Wall
  build-depends:
    base >= 4 && < 6, 
    mtl >= 1.1 && < 1.2,
    containers >= 0.2.0.1,
    monoids >= 0.1.36 && < 0.2.0.2
  exposed-modules:
    Logic.QSAT.Encoding
    Logic.QSAT.Encoding.Bool
    Logic.QSAT.Monad
    Logic.QSAT.Problem
