name:          ersatz-examples
category:      Logic, Algorithms
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett, Eric Mertens, Johan Kiviniemi
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/ersatz
bug-reports:   http://github.com/ekmett/ersatz/issues
copyright:     Copyright (C) 2008-2014 Edward A. Kmett,
               Copyright (C) 2004-2008 Dave Menendez
synopsis:      A monad for expressing SAT or QSAT problems using observable sharing.
description:   A monad for expressing SAT or QSAT problems using observable sharing.
               .
               @ersatz@ examples
build-type:    Simple
tested-with:   GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository head
  type: git
  location: git://github.com/ekmett/ersatz.git

executable ersatz-factor
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall

  main-is:
    Factor.hs

  build-depends:
    base   >= 4.8   && < 5,
    ersatz == 0.4.*,
    mtl    >= 2.0.1 && < 2.3

executable ersatz-fish
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall

  main-is:
    Fish.hs

  build-depends:
    base       >= 4.8   && < 5,
    containers >= 0.4   && < 0.6,
    ersatz     == 0.4.*,
    mtl        >= 2.0.1 && < 2.3

executable ersatz-regexp-grid
  hs-source-dirs: regexp-grid
  default-language: Haskell2010
  ghc-options: -Wall

  main-is:
    Main.hs

  other-modules:
    RegexpGrid.Problem
    RegexpGrid.Regexp
    RegexpGrid.Types

  build-depends:
    base       >= 4.8   && < 5,
    containers >= 0.4   && < 0.6,
    ersatz     == 0.4.*,
    lens       >= 3.8   && < 5,
    mtl        >= 2.0.1 && < 2.3,
    parsec     >= 3.1   && < 3.2,
    semigroups >= 0.16  && < 1

executable ersatz-sudoku
  hs-source-dirs: sudoku
  default-language: Haskell2010
  ghc-options: -Wall

  main-is:
    Main.hs

  other-modules:
    Sudoku.Cell
    Sudoku.Problem

  build-depends:
    array  >= 0.3.0.2 && < 0.6,
    base   >= 4.8     && < 5,
    ersatz == 0.4.*,
    mtl    >= 2.0.1   && < 2.3
