name:          sudoku
version:       0.1
license-file:  COPYING
author:        Johan Kiviniemi
maintainer:    Johan Kiviniemi <devel@johan.kiviniemi.name>
copyright:     © 2013 Johan Kiviniemi
build-type:    Simple
cabal-version: >= 1.8
synopsis:      A sudoku solver
description:   An example program that solves a sudoku problem using Ersatz.

executable sudoku
  main-is: Main.hs
  build-depends: base == 4.6.*
               , array == 0.4.*
               , ersatz == 0.2.*
               , mtl == 2.1.*
  ghc-options: -Wall
